--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -29,13 +29,21 @@ jobs:
       - name: Upload artifacts
         uses: actions/upload-artifact@v3
         with:
-          name: dist files
-          path: |
-            dist
-            package.json
+          name: dist-files
+          path: dist
+          # path: |
+          #   dist
+          #   package.json
   deploy:
     needs: build
     runs-on: ubuntu-latest
     steps:
+      #! Download artifacts
+      - name: Download artifacts
+        uses: actions/download-artifact@v3
+        with:
+          name: dist-files
+      - name: Output files
+        run: ls
       - name: Deploy
         run: echo "Deploying..."
