--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -18,6 +18,8 @@ jobs:
   build:
     needs: test
     runs-on: ubuntu-latest
+    outputs:
+      script-file: ${{ steps.publish.outputs.script-file }} #! Output JS file name 
     steps:
       - name: Get code
         uses: actions/checkout@v3
@@ -25,6 +27,12 @@ jobs:
         run: npm ci
       - name: Build website
         run: npm run build
+
+      # Publish JS file name
+      - name: Publish JS file name
+        id: publish
+        run: find dist/assets/*.js -type f -execdir echo 'script-file={}' >> $GITHUB_OUTPUT ';'
+
       #! Upload artifacts
       - name: Upload artifacts
         uses: actions/upload-artifact@v3
@@ -45,5 +53,9 @@ jobs:
           name: dist-files
       - name: Output files
         run: ls
+
+      # Output File name
+      - name: Output File name
+        run: echo "${{ needs.build.outputs.script-file }}"
       - name: Deploy
         run: echo "Deploying..."
