--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -9,12 +9,21 @@ jobs:
     steps:
       - name: Get code
         uses: actions/checkout@v3
+
+        # Cache dependencies
+      - name: Cache dependencies
+        uses: actions/cache@v3
+        with:
+          path: ~/.npm
+          key: deps-node-modules-${{ hashFiles('**/package-lock.json') }}
+
       - name: Install dependencies
         run: npm ci
       - name: Lint code
         run: npm run lint
       - name: Test code
         run: npm run test
+        
   build:
     needs: test
     runs-on: ubuntu-latest
@@ -23,6 +32,15 @@ jobs:
     steps:
       - name: Get code
         uses: actions/checkout@v3
+
+        # Cache dependencies
+      - name: Cache dependencies
+        uses: actions/cache@v3
+        with:
+          path: ~/.npm
+          key: deps-node-modules-${{ hashFiles('**/package-lock.json') }}
+        
+        # Install dependencies
       - name: Install dependencies
         run: npm ci
       - name: Build website
@@ -57,5 +75,6 @@ jobs:
       # Output File name
       - name: Output File name
         run: echo "${{ needs.build.outputs.script-file }}"
+
       - name: Deploy
         run: echo "Deploying..."
