--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -1,80 +1,77 @@
-name: Deploy website
+name: Website Deployment
 on:
   push:
     branches:
       - master
 jobs:
+  lint:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Get code
+        uses: actions/checkout@v3
+      - name: Cache dependencies
+        id: cache
+        uses: actions/cache@v3
+        with:
+          path: ~/.npm
+          key: deps-node-modules-${{ hashFiles('**/package-lock.json') }}
+      - name: Install dependencies
+        run: npm ci
+      - name: Lint code
+        run: npm run lint
   test:
     runs-on: ubuntu-latest
     steps:
       - name: Get code
         uses: actions/checkout@v3
-
-        # Cache dependencies
       - name: Cache dependencies
+        id: cache
         uses: actions/cache@v3
         with:
           path: ~/.npm
           key: deps-node-modules-${{ hashFiles('**/package-lock.json') }}
-
       - name: Install dependencies
         run: npm ci
-      - name: Lint code
-        run: npm run lint
       - name: Test code
+        id: run-test
         run: npm run test
-        
+      - name: Upload test report
+        if: failure() && ${{ steps.run-test.outcome == 'failure' }}
+        uses: actions/upload-artifact@v3
+        with:
+          name: test-report
+          path: test.json
   build:
     needs: test
     runs-on: ubuntu-latest
-    outputs:
-      script-file: ${{ steps.publish.outputs.script-file }} #! Output JS file name 
     steps:
       - name: Get code
         uses: actions/checkout@v3
-
-        # Cache dependencies
       - name: Cache dependencies
+        id: cache
         uses: actions/cache@v3
         with:
           path: ~/.npm
           key: deps-node-modules-${{ hashFiles('**/package-lock.json') }}
-        
-        # Install dependencies
       - name: Install dependencies
         run: npm ci
       - name: Build website
+        id: build-website
         run: npm run build
-
-      # Publish JS file name
-      - name: Publish JS file name
-        id: publish
-        run: find dist/assets/*.js -type f -execdir echo 'script-file={}' >> $GITHUB_OUTPUT ';'
-
-      #! Upload artifacts
       - name: Upload artifacts
         uses: actions/upload-artifact@v3
         with:
           name: dist-files
           path: dist
-          # path: |
-          #   dist
-          #   package.json
   deploy:
     needs: build
     runs-on: ubuntu-latest
     steps:
-      #! Download artifacts
-      - name: Download artifacts
+      - name: Get build artifacts
         uses: actions/download-artifact@v3
         with:
           name: dist-files
-      - name: Output files
+      - name: Output contents
         run: ls
-
-      # Output File name
-      - name: Output File name
-        run: echo "${{ needs.build.outputs.script-file }}"
-
       - name: Deploy
         run: echo "Deploying..."
