--- a/.github/workflows/use-reuse.yml
+++ b/.github/workflows/use-reuse.yml
@@ -71,7 +71,18 @@ jobs:
     uses: ./.github/workflows/reusable.yml
     with:
       artifact-name: dist-files
-  
+    # secrets:
+    #   some-secret: ${{ secrets.SOME_SECRET }}
+  print-deploy-result:
+    needs: deploy
+    runs-on: ubuntu-latest
+    steps:
+      - name: Output Information
+        run: |
+          echo "Deployment was successful."
+          echo "Please check the logs for more information."
+          echo "${{ needs.deploy.outputs.result }}"
+
   report:
     needs: [lint, deploy]
     if: failure()
