--- a/.github/workflows/reusable.yml
+++ b/.github/workflows/reusable.yml
@@ -10,7 +10,7 @@ on:
     outputs:
       result:
         description: 'Result of the deploy'
-        value: ${{ jobs.deploy.outputs.outcome }}}
+        value: ${{ jobs.deploy.outputs.outcome }}
     # secrets: 
     #   some-secret:
     #     required: false
